--- a/index.html
+++ b/index.html
@@ -3,93 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
     <title> Elsa Catrina</title>
-    <style>
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100dvh;
-            margin: 0;
-            background-image: url('https://i.postimg.cc/x9MyhM3D/react-system.webp');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            font-family: monospace;
-        }
-
-        main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 8px;
-            max-width: 330px;
-            padding: 16px;
-            border-radius: 16px;
-            box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.5);
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(4px);
-            text-align: center;
-        }
-
-        img {
-            width: 230px;
-            height: 230px;
-            border-radius: 50%;
-        }
-
-        h1 {
-            font-size: 18px;
-            margin: 0;
-        }
-
-        h2 {
-            font-size: 16px;
-            color: lightgray;
-            margin: 0;
-            gap: 2px;
-        }
-
-        p {
-            font-size: 14px;
-            margin: 0;
-        }
-
-        ul {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-        }
-
-        .badge {
-            padding: 4px;
-            border-radius: 8px;
-            background-color: #23b5e8;
-            color: black;
-            font-weight: 700;
-            transition: box-shadow 0.25s, filter 0.25s;
-            cursor: pointer;
-
-            &:hover {
-                box-shadow: 0 2px 4px 0 #23b5e8;
-                filter: brightness(1.25);
-            }
-        }
-
-        .link {
-            color: white;
-            font-weight: 700;
-            transition: color 0.25s;
-
-            &:hover {
-                color: #23b5e8;
-            }
-        }
-    </style>
 </head>
 <body>
     <main>
